--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
 
-    <link rel="shortcut icon" href="favicon_io/favicon-16x16.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/CEEPlogobrasao-main/brasao/android-chrome-192x192.png" type="Brasão CEEP">
     <title>CEEP - Cianorte</title>
     <link rel="stylesheet" href="style.css">
     
 </head>
 <body>
     <header>
-        
-        <h1 class="titulo"><img src="favicon_io/favicon.ico" alt="Logotipo João" class="logoprincipal">CEEP - Centro Estadual de Educação Profissional - Cianorte</h1>
+        <img src="img/CEEPlogobrasao-main/brasao/android-chrome-192x192.png" alt="Brasão" class="logoprincipal">
+        <h1 class="titulo">CEEP - Centro Estadual de Educação Profissional - Cianorte</h1>
     </header>
 
     <main>
