--- a/index.html
+++ b/index.html
@@ -16,8 +16,16 @@
 </head>
 <body>
     <header>
-        <img src="img/CEEPlogobrasao-main/brasao/android-chrome-192x192.png" alt="Brasão" class="logoprincipal">
+        <img src="CEEPlogobrasao-main/brasao/android-chrome-512x512.png" alt="Brasão" class="logoprincipal">
         <h1 class="titulo">CEEP - Centro Estadual de Educação Profissional - Cianorte</h1>
+        <nav>
+            <a"CEEPlogobrasao-main/facebook.webp">
+                <img src="CEEPlogobrasao-main/facebook.webp" alt="facebooksocial" class="redessociais">
+            </a>
+            <a href="CEEPlogobrasao-main/instagram.webp">
+                <img src="CEEPlogobrasao-main/instagram.webp" alt="instagramsocial" class="redessociais">
+            </a>
+        </nav>
     </header>
 
     <main>
