--- a/index.html
+++ b/index.html
@@ -15,15 +15,19 @@
     
 </head>
 <body>
-    <header>
+    <header class="container">
         <img src="CEEPlogobrasao-main/brasao/android-chrome-512x512.png" alt="Brasão" class="logoprincipal">
+
         <h1 class="titulo">CEEP - Centro Estadual de Educação Profissional - Cianorte</h1>
         <nav>
-            <a"CEEPlogobrasao-main/facebook.webp">
+            <a href="https://www.facebook.com/ceepcianorte/?locale=pt_BR/">
                 <img src="CEEPlogobrasao-main/facebook.webp" alt="facebooksocial" class="redessociais">
             </a>
-            <a href="CEEPlogobrasao-main/instagram.webp">
+            <a href="https://www.instagram.com/ceepcianorte/">
                 <img src="CEEPlogobrasao-main/instagram.webp" alt="instagramsocial" class="redessociais">
+            </a>
+            <a href="https://br.linkedin.com/school/ceep-cianorte/">
+                <img src="CEEPlogobrasao-main/linkedin.webp" alt="linkedinsocial" class="redessociais">
             </a>
         </nav>
     </header>
