--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
 
-    <link rel="shortcut icon" href="img/CEEPlogobrasao-main/brasao/android-chrome-192x192.png" type="Brasão CEEP">
+    <link rel="shortcut icon" href="CEEPlogobrasao-main/brasao/android-chrome-192x192.png" type="Brasão CEEP">
     <title>CEEP - Cianorte</title>
     <link rel="stylesheet" href="style.css">
     
@@ -32,12 +32,12 @@
         </nav>
     </header>
 
-    <main>
+    <main class="container">
         <p><strong>Missão da empresa: </strong></p>
         <a href="egressos.html" class="botao">Ir para egressos</a>
     </main>
     
-    <footer>
+    <footer class="container">
         <p>Rua: D. Pedro II, 5500 - Zona 01 - Cianorte - PR</p>
     </footer>
 </body>
