--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <img src="CEEPlogobrasao-main/brasao/android-chrome-512x512.png" alt="Brasão" class="logoprincipal">
 
         <h1 class="titulo">CEEP - Centro Estadual de Educação Profissional - Cianorte</h1>
-        <nav>
+        <nav class="menu-flutuante">
             <a href="https://www.facebook.com/ceepcianorte/?locale=pt_BR/">
                 <img src="CEEPlogobrasao-main/facebook.webp" alt="facebooksocial" class="redessociais">
             </a>
